<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_UnderfloorHeatingDefaultParameters" Id="{4e0eb4b8-ac42-4461-b13d-6448dab17409}">
    <Declaration><![CDATA[TYPE ST_UnderfloorHeatingDefaultParameters :
STRUCT
	aSetPointLimitsTemperature : ARRAY[1..2] OF REAL := [16,45];
	
	//parameters for characteristic heating and cooling curve
	aLimitsAmbientTemperature: ARRAY[1..2] OF REAL := [-5,20];
	aLimitsFeedTemperature: ARRAY[1..2] OF REAL := [40,15];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>