<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_UnderfloorHeatingSetParameters" Id="{af258353-03b2-46dd-afd7-9b0deec3f899}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA.StructuredType' := '1'}
TYPE ST_UnderfloorHeatingSetParameters :
STRUCT
	bHeatingModeAlgorithm : BOOL;
	bHeatingModeManual : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>