<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_HnhtCnLinkageControl" Id="{b0a9a916-f2c4-4be8-b557-e57b80659992}">
    <Declaration><![CDATA[TYPE ST_HnhtCnLinkageControl :
STRUCT	
	bHeatingMode : BOOL;
	bAlgorithmPermission_HNHT : BOOL;
	bAlgorithmPermission_CN : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>